Sass/Scss - create scss layouts, components, folders, ass plugins - testing.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,8 +2,8 @@
 title: Home
 favicon: false
 
-bodyClass: home
-pageName: index
+bodyClassName: home
+dataPageName: index
 
 additionalStyleFile: false
 ---
