--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -4,7 +4,7 @@ meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit
 meta(http-equiv="x-ua-compatible" content="ie=edge")
 
 // TITLE
-title!= titleName
+title!= title
 
 if(favicon)
   // FAVICON
