--- a/src/scss/_shared/_main.scss
+++ b/src/scss/_shared/_main.scss
@@ -6,7 +6,7 @@ html {
 
 html,
 body {
-  width: $w-all;
+  //width: $w-all;
   min-height: 100vh;
   @include mixinRespondTo(mobile-max) {
     overflow-x: hidden;
@@ -25,7 +25,7 @@ body {
   line-height: 1.42857143;
   font-size: 16px;
   //font-family: $f-OS-semibold;
-  background-color: $c-white;
+  //background-color: $c-white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
