Create task for sprite PNG.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,6 +2,10 @@
 @import "_utilities/mixin";
 @import "_utilities/variable";
 ///
+/// GENERATED FILES
+///
+@import "_generated/spritePNG";
+///
 /// MAIN FILES
 ///
 @import "_shared/fonts";
