Fix clean task - add src img.

--- a/src/pug/shared/_style.pug
+++ b/src/pug/shared/_style.pug
@@ -1,6 +1,6 @@
 // STYLE :: START
 
-link(rel="stylesheet" href="css/vendor.css")
+link(rel="stylesheet" href="css/vendor.min.css")
 link(rel="stylesheet" href="css/app.css")
 
 if(additionalStyleFile)
