Cosmetic gulp files.

--- a/src/scss/_shared/_main.scss
+++ b/src/scss/_shared/_main.scss
@@ -25,7 +25,7 @@ body {
   line-height: 1.42857143;
   font-size: 16px;
   //font-family: $f-OS-semibold;
-  background-color: red;
+  //background-color: red;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
