Change js logic files. Cosmetic style gulp task.

--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -13,7 +13,9 @@ html(lang="en")
     block header
       include ../components/_header
 
-      block content
+      #barba-wrapper
+        .barba-container
+          block content
 
       block footer
         include ../components/_footer
