--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,8 +4,8 @@
 ///
 /// GENERATED FILES
 ///
-@import "_generated/spritePNG";
-@import "_generated/spriteSVG";
+//@import "_generated/spritePNG";
+//@import "_generated/spriteSVG";
 ///
 /// MAIN FILES
 ///
