Add JS callback for Magnific Popup.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,7 +18,8 @@
 @import "_shared/fonts";
 @import "_shared/main";
 @import "_shared/grid";
-///@import "_shared/viewPortChecker";
+//@import "_shared/viewPortChecker";
+//@import "_shared/magnificPopup";
 ///
 /// MACROS
 /// ===============
