--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -20,6 +20,7 @@
 @import "_shared/grid";
 //@import "_shared/viewPortChecker";
 //@import "_shared/magnificPopup";
+//@import "_shared/swiper";
 ///
 /// MACROS
 /// ===============
