--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,6 +21,7 @@
 //@import "_shared/viewPortChecker";
 //@import "_shared/magnificPopup";
 //@import "_shared/swiper";
+//@import "_shared/objectFitImages";
 ///
 /// MACROS
 /// ===============
