Fix style components and utilities. Add macros.

--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -1,4 +1,4 @@
-include ../mixin/_mixin
+include ../utilities/_mixin
 
 doctype html
 html(lang="en")
@@ -20,5 +20,5 @@ html(lang="en")
       block footer
         include ../components/_footer
 
-  block script
+  //block script
     include _script
