--- a/src/scss/_utilities/_variable.scss
+++ b/src/scss/_utilities/_variable.scss
@@ -7,26 +7,73 @@
 ///
 /// @name   object
 ///
-
 $object: (
   colors : (
-    white : #fff,
-    black : #000,
-    primary : #4285F4,
-    success : #00C851,
-    info : #33B5E5,
-    warning : #FF8800,
-    danger : #CC0000,
+    white                 : #fff,
+    black                 : #000,
+
+    primary               : #4285f4,
+
+    success               : #00c851,
+    info                  : #33b5e5,
+    warning               : #ff8800,
+    danger                : #cc0000,
+
+    grey                  : #808080,
+    lightGrey             : #d3d3d3,
+    darkGrey              : #a9a9a9,
+    dimGray               : #696969,
+    snow                  : #fffafa,
+    whiteSmooke           : #f5f5f5,
+    gainsboro             : #dcdcdc,
+    silver                : #c0c0c0,
+    yellow                : #ffff00,
+    aliceBlue             : #f0f8ff
   ),
-  fontsFamily : (),
   dimension : (
-    all : 100%,
-    fhd : 1920,
-    hd : 1440,
-    wide : 1200,
-    desktop : 992,
-    tablet : 768,
-    mobile : 767,
-    mobile-xs : 576,
+    all                   : 100%,
+    fhd                   : 1920px,
+    hd                    : 1440px,
+    wide                  : 1200px,
+    desktop               : 992px,
+    tablet                : 768px,
+    mobile                : 576px,
+    mobile-xs             : 320px,
   ),
 );
+
+///
+/// MAIN PALLET
+/// ===============
+$c-white                  : return-value(colors, white);
+$c-black                  : return-value(colors, black);
+
+$c-primary                : return-value(colors, primary);
+
+$c-success                : return-value(colors, success);
+$c-info                   : return-value(colors, info);
+$c-warning                : return-value(colors, warning);
+$c-danger                 : return-value(colors, danger);
+
+$c-grey                   : return-value(colors, grey);
+$c-lightGrey              : return-value(colors, lightGrey);
+$c-darkGrey               : return-value(colors, darkGrey);
+$c-snow                   : return-value(colors, snow);
+$c-whiteSmooke            : return-value(colors, whiteSmooke);
+$c-gainsboro              : return-value(colors, gainsboro);
+$c-silver                 : return-value(colors, silver);
+$c-yellow                 : return-value(colors, yellow);
+$c-aliceBlue              : return-value(colors, aliceBlue);
+
+$d-all                    : return-value(dimension, all);
+$d-fhd                    : return-value(dimension, fhd);
+$d-hd                     : return-value(dimension, hd);
+$d-wide                   : return-value(dimension, wide);
+$d-desktop                : return-value(dimension, desktop);
+$d-tablet                 : return-value(dimension, tablet);
+$d-mobile                 : return-value(dimension, mobile);
+$d-mobile-xs              : return-value(dimension, mobile-xs);
+
+///
+/// ADDITIONAL PALLET
+/// ===============
