Change config files name. Add css bower components - hamburger-css.

--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -8,7 +8,7 @@ title!= title
 
 if(favicon)
   // FAVICON
-  link(rel="icon" type="image/png" href="./image/" + favicon + ".png")
+  link(rel="icon" type="image/png" href="./img/" + favicon + ".png")
 
 include _style
 
