--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,9 +28,9 @@
 /// ===============
 //@import "_macros/logotype";
 //@import "_macros/nav";
+//@import "_macros/hamburger";
 ///
 /// COMPONENTS
 /// ===============
 //@import "_components/header";
 //@import "_components/footer";
-
