--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -8,7 +8,7 @@ title!= title
 
 if(favicon)
   // FAVICON
-  link(rel="icon" type="image/png" href="./img/" + favicon + ".png")
+  link(rel="shortcut icon" href="./icon/" + favicon + ".ico")
 
 include _style
 
