Change hamburger logic.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,7 +7,7 @@
 ///
 /// VENDOR
 /// ===============
-//@import "_vendor/hamburgers";
+//@import "_vendor/hamburger/_hamburgers";
 ///
 /// GENERATED
 /// ===============
