--- a/src/scss/_shared/_fonts.scss
+++ b/src/scss/_shared/_fonts.scss
@@ -1,7 +1,7 @@
 ///
 /// Mixin generate @font-face
 /// ===============
-@mixin mixinFontFace($fontName, $fontPath, $fontExtension: eot woff2 woff ttf svg) {
+@mixin mixinFontFace($fontName, $fontNameExt, $fontPath, $fontWeight, $fontExtension: eot woff2 woff ttf svg) {
 	$src: null;
 	$srcEot: null;
 
@@ -28,15 +28,15 @@
 
 		@if($ext == "eot") {
 			$srcEot:
-				append($srcEot, url(quote($fontPath + $fontName + "." + $ext)));
+				append($srcEot, url(quote($fontPath + $fontName + $fontNameExt + "." + $ext)));
 			$src:
 				append($src,
-					url(quote($fontPath + $fontName + "." + $extensionModsValue)) format(quote($format)), comma
+					url(quote($fontPath + $fontName + $fontNameExt + "." + $extensionModsValue)) format(quote($format)), comma
 				);
 		} @else {
 			$src:
 				append($src,
-					url(quote($fontPath + $fontName + "." + $extensionModsValue)) format(quote($format)), comma
+					url(quote($fontPath + $fontName + $fontNameExt + "." + $extensionModsValue)) format(quote($format)), comma
 				);
 		}
 	}
@@ -48,7 +48,7 @@
 		src: $src;
 
 		font-style: normal;
-		font-weight: normal;
+		font-weight: $fontWeight;
 	}
 }
 
@@ -58,5 +58,8 @@
 ///
 /// Example:
 ///
-/// @include mixinFontFace("JournalRegular", "../fonts/", eot woff2 woff ttf svg);
+/// @include mixinFontFace("JournalRegular", "-Bold", "../fonts/", normal, otf eot woff2 woff ttf svg);
+/// @include mixinFontFace("SF-Pro-Text", "-Bold", "../fonts/", bold, otf);
+/// @include mixinFontFace("SF-Pro-Text", "-Heavy", "../fonts/", 800, otf);
+///
 /// ===============
