Hamburger - add default animated, create js method.

--- a/src/pug/macros/_hamburger.pug
+++ b/src/pug/macros/_hamburger.pug
@@ -1,6 +1,8 @@
 // HAMBURGER :: START
 
-.hamburger
+.hamburger.hamburger--squeeze(
+  role="button" hamburger-js
+)
   .hamburger-box
     .hamburger-inner
 
