--- a/src/scss/_vendor/hamburger/_hamburgers.scss
+++ b/src/scss/_vendor/hamburger/_hamburgers.scss
@@ -10,6 +10,7 @@
 ///
 /// Settings
 /// ===============
+$hamburger-display                         : flex !default;
 $hamburger-padding-x                       : 15px !default;
 $hamburger-padding-y                       : 15px !default;
 $hamburger-layer-width                     : 40px !default;
@@ -63,7 +64,7 @@ $hamburger-types: (
   //spring-r,
   //stand,
   //stand-r,
-  //squeeze,
+  squeeze,
   //vortex,
   //vortex-r
 ) !default;
@@ -106,7 +107,7 @@ $hamburger-types: (
 //@import "types/spring-r";
 //@import "types/stand";
 //@import "types/stand-r";
-//@import "types/squeeze";
+@import "types/squeeze";
 //@import "types/vortex";
 //@import "types/vortex-r";
 
