--- a/src/scss/_utilities/_mixin.scss
+++ b/src/scss/_utilities/_mixin.scss
@@ -71,6 +71,90 @@
 
 
 ///
+///
+///
+@mixin marginAuto {
+	margin: {
+		left: auto;
+		right: auto;
+	}
+}
+
+
+///
+///
+///
+@mixin input-placeholder {
+	&.placeholder { @content; }
+	&:-moz-placeholder { @content; }
+	&::-moz-placeholder { @content; }
+	&:-ms-input-placeholder { @content; }
+	&::-webkit-input-placeholder { @content; }
+}
+
+
+///
+///
+///
+@mixin pseudo($display: block, $pos: absolute, $content: ''){
+	content: $content;
+	display: $display;
+	position: $pos;
+}
+@mixin cssTriangle($color, $direction, $size: 6px, $position: absolute, $round: false){
+	@include pseudo($pos: $position);
+	width: 0;
+	height: 0;
+	@if ($round) {
+		border-radius: 3px;
+	}
+	@if ($direction == down) {
+		border-left: $size solid transparent;
+		border-right: $size solid transparent;
+		border-top: $size solid $color;
+		margin-top: 0 - round( $size / 2.5 );
+	} @else if ($direction == up) {
+		border-left: $size solid transparent;
+		border-right: $size solid transparent;
+		border-bottom: $size solid $color;
+		margin-bottom: 0 - round( $size / 2.5 );
+	} @else if ($direction == right) {
+		border-top: $size solid transparent;
+		border-bottom: $size solid transparent;
+		border-left: $size solid $color;
+		margin-right: -$size;
+	} @else if ($direction == left) {
+		border-top: $size solid transparent;
+		border-bottom: $size solid transparent;
+		border-right: $size solid $color;
+		margin-left: -$size;
+	}
+}
+
+
+///
+/// Define vertical, horizontal, or both position
+///
+@mixin centered($prop: absolute, $position: both) {
+	position: $prop;
+
+	@if ($position == 'vertical') {
+		top: 50%;
+		transform: translateY(-50%);
+	}
+	@else if ($position == 'horizontal') {
+		left: 50%;
+		transform: translate(-50%);
+	}
+	@else if ($position == 'both') {
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+}
+
+
+///
 /// Mixin transition
 ///
 /// @name			transition
