--- a/src/pug/shared/_script.pug
+++ b/src/pug/shared/_script.pug
@@ -1,6 +1,6 @@
 // SCRIPT :: START
 
-script(src="js/vendor.min.js")
-script(src="js/app.js")
+//script(src="js/vendor.min.js")
+//script(src="js/app.js")
 
 // SCRIPT :: END
