--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -1,5 +1,6 @@
 // COMMON :: START
 
+
 /* ICONS */
 .icon {
   &:before {
@@ -7,5 +8,8 @@
     display: block;
   }
 }
+/* ICONS
+==================== */
+
 
 // COMMON :: END
