--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,7 +18,7 @@
 /// ===============
 @import "_shared/fonts";
 @import "_shared/grid";
-@import "_shared/main";
+@import "_shared/main-reset";
 @import "_shared/common";
 //@import "_shared/viewPortChecker";
 //@import "_shared/magnificPopup";
