--- a/src/scss/_shared/_main-reset.scss
+++ b/src/scss/_shared/_main-reset.scss
@@ -1,22 +1,20 @@
-
-html {
-  -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: transparent;
-}
-
 html,
 body {
   width: $d-all;
   min-height: 100vh;
+
 
   &.is-hideScroll {
     overflow: hidden;
   }
 }
 
+
 html {
+  -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 
 body {
   overflow-x: hidden;
@@ -25,12 +23,13 @@ body {
   padding: 0;
   background-color: $c-white;
   line-height: 1.42857143;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
   //font-family: "", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 * {
   box-sizing: border-box;
@@ -41,6 +40,7 @@ body {
   }
 }
 
+
 button,
 input,
 optgroup,
@@ -50,54 +50,66 @@ textarea {
   margin: 0;
 }
 
+
 button,
 input {
   overflow: visible;
 }
+
 
 button[disabled] {
   opacity: 0.55;
   cursor: not-allowed;
 }
 
+
 [type="search"] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
+
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
+
 textarea {
   overflow: auto;
 }
+
 
 p,
 h1, h2, h3, h4, h5, h6,
 hr {
   margin: 0;
+  padding: 0;
 }
+
 
 ul {
   margin: 0;
   padding: 0;
+
 
   li {
     list-style: none;
   }
 }
 
+
 a {
   outline: none;
   text-decoration: none;
+
 
   &:hover,
   &:focus {
     text-decoration: none;
   }
 }
+
 
 input[type="text"] {
   appearance: none;
