Add selectric, stellar. Change vendor fonts & sprite SVG task. Separate scss files.

--- a/src/pug/utilities/_mixin.pug
+++ b/src/pug/utilities/_mixin.pug
@@ -2,7 +2,7 @@
 
 mixin iconSVG(name, mod)
   - var mod = mod || ''
-  svg(class="icon icon-" + name + ' ' + mod)
+  svg(class="icon-svg icon-" + name + ' ' + mod)
     use(xlink:href="./img/sprite.svg#" + name)
 
 //- MIXIN :: END
