--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,6 +8,7 @@
 /// VENDOR
 /// ===============
 //@import "_vendor/hamburger/_hamburgers";
+//@import "_vendor/selectric/_selectric";
 ///
 /// GENERATED
 /// ===============
@@ -23,15 +24,16 @@
 //@import "_shared/viewPortChecker";
 //@import "_shared/magnificPopup";
 //@import "_shared/swiper";
-//@import "_shared/objectFitImages";
+@import "_shared/objectFitImages";
+//@import "_shared/iconPNG";
+//@import "_shared/iconSVG";
 ///
 /// MACROS
 /// ===============
 //@import "_macros/logotype";
 //@import "_macros/nav";
-//@import "_macros/hamburger";
 ///
 /// COMPONENTS
 /// ===============
-//@import "_components/header";
+@import "_components/header";
 //@import "_components/footer";
