--- a/src/scss/_shared/_objectFitImages.scss
+++ b/src/scss/_shared/_objectFitImages.scss
@@ -1,3 +1,18 @@
-[objectFit-js] {
-  // ...
+// OBJECT-FIT :: START
+
+.object-fit {
+  width: 100%;
+  height: 100%;
+
+  &--coverCenter {
+    object-fit: cover;
+    object-position: center;
+  }
+
+  &--containCenter {
+    object-fit: contain;
+    object-position: center;
+  }
 }
+
+// OBJECT-FIT :: END
