--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -9,6 +9,7 @@ title!= title
 if(favicon)
   // FAVICON
   link(rel="shortcut icon" href="./icon/" + favicon + ".ico")
+  //link(rel="icon" type="image/png" href="./icon/" + favicon + ".png")
 
 include _style
 
