--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -35,5 +35,5 @@
 ///
 /// COMPONENTS
 /// ===============
-@import "_components/header";
+//@import "_components/header";
 //@import "_components/footer";
