Add list pages preview, favicon.

--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -13,9 +13,9 @@ html(lang="en")
       include ../components/_header
 
 
-    #barba-wrapper
+    //- #barba-wrapper
       .barba-container
-        block content
+    block content
 
 
     block footer
