--- a/src/scss/_shared/_main-reset.scss
+++ b/src/scss/_shared/_main-reset.scss
@@ -1,6 +1,6 @@
 html,
 body {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 
 
@@ -113,4 +113,12 @@ a {
 
 input[type="text"] {
   appearance: none;
+}
+
+picture {
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
