--- a/src/pug/utilities/_mixin.pug
+++ b/src/pug/utilities/_mixin.pug
@@ -1,33 +1,11 @@
 //- MIXIN :: START
 
-//- SVG icon
-mixin iconSVG(name, mod)
-  - var mod = mod || ''
-  svg(class="icon-svg icon-" + name + ' ' + mod)
-    use(xlink:href="./img/sprite.svg#" + name)
-
-
-//- PICTURE TAG
-//-
-//- example: +pictureTag(false, "png", "img-home-video-poster")
-//-
-mixin pictureTag(ieSupport, imgType, imgName)
-  -
-    var imgStringPathWebp = './img/' + imgName + '.webp, ./img/' + imgName + '@2x.webp 2x',
-      imgStringPath = './img/' + imgName + '.' + imgType + ', ./img/' + imgName + '@2x.' + imgType + ' 2x';
-
-  picture
-    if(ieSupport)
-      <!--[if IE 9]>
-      video(style="display: none;")
-      <![endif]-->
-        source(srcset= imgStringPath)
-      <!--[if IE 9]>
-      <![endif]-->
-    else
-      source(srcset!= imgStringPathWebp type="image/webp")
-      source(srcset!= imgStringPath type!= "image/" + imgType)
-
-    img(srcset!= imgStringPath)
+include ./_mixin/_svg-icon
+include ./_mixin/_picture
+include ./_mixin/_logotype
+include ./_mixin/_hamburger
+include ./_mixin/_swiper
+include ./_mixin/_modal
+include ./_mixin/_nav
 
 //- MIXIN :: END
