Create production mode gulp task.

--- a/src/pug/shared/_style.pug
+++ b/src/pug/shared/_style.pug
@@ -1,6 +1,9 @@
 // STYLE :: START
 
-link(rel="stylesheet" href="css/vendor.min.css")
-link(rel="stylesheet" href="css/app.css")
+if(env)
+  link(rel="stylesheet" href="css/bundle.min.css")
+else
+  link(rel="stylesheet" href="css/vendor.css")
+  link(rel="stylesheet" href="css/app.css")
 
 // STYLE :: END
