--- a/src/pug/utilities/_mixin/_logotype.pug
+++ b/src/pug/utilities/_mixin/_logotype.pug
@@ -5,10 +5,13 @@
     @param {String} hrefVal - default homepage '/'
     @param {String} imgName
     @param {String} imgExt
+    @param {String} svgName
+    @param {String} txtVal
 
     @example
       +logotype('header', '', 'imgName', 'png')
       +logotypeSVG('header', '', 'svgIconName')
+      +logotypeImgText('header', '', 'imgName', 'png', 'logoSomeText')
 
 //- ========================
 mixin logotype(classMod, hrefVal, imgName, imgExt)
@@ -20,12 +23,20 @@ mixin logotype(classMod, hrefVal, imgName, imgExt)
       href!= (hrefVal) ? hrefVal : "/"
       title="" class="logo__link"
     )
-      img(
+      img.logo__img(
         srcset!= imgSrcSet
         alt="" title=""
        )
 
 mixin logotypeSVG(classMod, hrefVal, svgName)
+  .logo(class!= "logo--" + classMod)
+    a(
+      href!= (hrefVal) ? hrefVal : "/"
+      title="" class="logo__link"
+    )
+      +iconSVG(svgName)
+
+mixin logotypeImgText(classMod, hrefVal, imgName, imgExt, txtVal)
   -
     var imgSrcSet = "./img/" + imgName + "." + imgExt + ", ./img/" + imgName + "@2x." + imgExt;
 
@@ -34,4 +45,10 @@ mixin logotypeSVG(classMod, hrefVal, svgName)
       href!= (hrefVal) ? hrefVal : "/"
       title="" class="logo__link"
     )
-      +iconSVG(svgName)
+      .logo__img-wrap
+        img.logo__img(
+          srcset!= imgSrcSet
+          alt="" title=""
+        )
+      p.logo__text!= txtVal
+
