--- a/src/pug/shared/_script.pug
+++ b/src/pug/shared/_script.pug
@@ -1,6 +1,9 @@
 // SCRIPT :: START
 
-script(src="js/vendor.min.js")
-script(src="js/app.js")
+if(env)
+  script(src="js/bundle.min.js")
+else
+  script(src="js/vendor.js")
+  script(src="js/app.js")
 
 // SCRIPT :: END
