--- a/src/scss/_shared/_grid.scss
+++ b/src/scss/_shared/_grid.scss
@@ -29,3 +29,23 @@ $paddingRight: $paddingLeft;
     max-width: 100%;
   }
 }
+
+
+// for develop - pls del for production
+.c-grid {
+  @include respond(small) {
+    max-width: $maxWidth;
+  }
+  @include respond(large) {
+    max-width: $maxWidth;
+  }
+  @include respond(extra-large) {
+    max-width: $maxWidth;
+  }
+  @include respond(medium) {
+    max-width: $maxWidth;
+  }
+  @include respond(wide-small) {
+    max-width: $maxWidth;
+  }
+}
