Add iconFont. Create components. Add new scss/pug mixin.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,4 +7,5 @@ dataPageName: index
 extends shared/_layout
 
 block content
-  div(class!= contentClassName)
+  div.body(class!= contentClassName)
+
