--- a/src/pug/utilities/_mixin.pug
+++ b/src/pug/utilities/_mixin.pug
@@ -7,5 +7,7 @@ include ./_mixin/_hamburger
 include ./_mixin/_swiper
 include ./_mixin/_modal
 include ./_mixin/_nav
+include ./_mixin/_form
+
 
 //- MIXIN :: END
