--- a/src/scss/_utilities/_mixin.scss
+++ b/src/scss/_utilities/_mixin.scss
@@ -71,7 +71,7 @@
 
 
 ///
-///
+/// Mixin horizontal centered
 ///
 @mixin marginAuto {
 	margin: {
@@ -82,7 +82,7 @@
 
 
 ///
-///
+/// Mixin placeholder for: input, textarea
 ///
 @mixin inputPlaceholder {
 	&.placeholder { @content; }
@@ -94,7 +94,7 @@
 
 
 ///
-///
+/// Mixin css triangle
 ///
 @mixin pseudo($display: block, $pos: absolute, $content: ''){
 	content: $content;
@@ -103,11 +103,14 @@
 }
 @mixin cssTriangle($color, $direction, $size: 6px, $position: absolute, $round: false){
 	@include pseudo($pos: $position);
+
 	width: 0;
 	height: 0;
+
 	@if ($round) {
 		border-radius: 3px;
 	}
+
 	@if ($direction == down) {
 		border-left: $size solid transparent;
 		border-right: $size solid transparent;
@@ -133,7 +136,7 @@
 
 
 ///
-/// Define vertical, horizontal, or both position
+/// Mixin center: vertical, horizontal, or both
 ///
 @mixin centered($prop: absolute, $position: both) {
 	position: $prop;
@@ -177,7 +180,85 @@
 
 
 ///
+/// Mixin fluid
+///
+/// @example
+///
+///		<selector> {
+///			// single
+///			@include fluid(font-size, 320px, 1366px, 14px, 22px);
+///
+///			// multiple
+///			@include fluid(padding-bottom padding-top, 20em, 70em, 2em, 4em);
+///
+///		}
+///
+@mixin fluid($properties, $min-vw, $max-vw, $min-value, $max-value) {
+	@each $property in $properties {
+		#{$property}: $min-value;
+	}
+
+	@media screen and (min-width: $min-vw) {
+		@each $property in $properties {
+			#{$property}: calc(#{$min-value} + #{strip-unit($max-value - $min-value)} * (100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)});
+		}
+	}
+
+	@media screen and (min-width: $max-vw) {
+		@each $property in $properties {
+			#{$property}: $max-value;
+		}
+	}
+}
+
+
+///
+/// Mixin consistent Font Sizes
+///
+///	@name font-size
+///
+/// @example
+///
+///		p {
+///  		@include font-size(14px)
+///		}
+///
+///
+@mixin font-size($size) {
+	font-size: $size;
+	font-size: calculateRem($size);
+}
+
+
+///
+/// Mixin Quick Gradients
+///
+///	@name background-gradient
+///
+///	@example
+///
+///		selector {
+///			@include background-gradient(red, black, 'vertical');
+///		}
+///
+@mixin background-gradient($start-color, $end-color, $orientation) {
+	background: $start-color;
+
+	@if $orientation == 'vertical' {
+		background: linear-gradient(to bottom, $start-color, $end-color);
+	}
+	@else if $orientation == 'horizontal' {
+		background: linear-gradient(to right, $start-color, $end-color);
+	}
+	@else {
+		background: radial-gradient(ellipse at center, $start-color, $end-color);
+	}
+}
+
+
+///
 /// Mixin media queries.
+///
 $breakpointsMedia: (
 	extra-small     	: "(min-width: 320px)", 	/// extra-small
 	max-extra-small 	: "(max-width: 575px)",
@@ -194,7 +275,8 @@ $breakpointsMedia: (
 	wide-medium     	: "(min-width: 1440px)",	/// wide-medium
 	max-wide-medium 	: "(max-width: 1599px)",
 	wide-large      	: "(min-width: 1600px)",	/// wide-large
-	hd        				: "(min-width: 1920px)"
+	max-wide-large    : "(max-width: 1919px)",
+	hd        				: "(min-width: 1920px)"		/// hd
 ) !default;
 
 @mixin respond($name) {
