--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,24 +14,30 @@
 /// ===============
 //@import "_generated/spritePNG";
 //@import "_generated/spriteSVG";
+//@import "_generated/spriteFont";
 ///
 /// SHARED
 /// ===============
-@import "_shared/fonts";
+//@import "_shared/fonts";
 @import "_shared/grid";
 @import "_shared/main-reset";
 @import "_shared/common";
 //@import "_shared/viewPortChecker";
 //@import "_shared/magnificPopup";
 //@import "_shared/swiper";
-@import "_shared/objectFitImages";
+//@import "_shared/objectFitImages";
 //@import "_shared/iconPNG";
 //@import "_shared/iconSVG";
+//@import "_shared/iconFont";
 ///
 /// MACROS
 /// ===============
 //@import "_macros/logotype";
 //@import "_macros/nav";
+//@import "_macros/title";
+//@import "_macros/btn";
+//@import "_macros/modal";
+@import "_macros/form";
 ///
 /// COMPONENTS
 /// ===============
