Update list pages tmpl, add emitty package for watch and modify only changed files.

--- a/src/pug/utilities/_mixin/_form.pug
+++ b/src/pug/utilities/_mixin/_form.pug
@@ -24,7 +24,7 @@ mixin formInput(classMod, uniqName, labelVal, inputType, inputClassMod, placehol
       )
     .c-form__notify
 
-//mixin formSelect()
-//mixin formTextarea()
-//mixin formRadio()
-//mixin formCheckbox()
+//- mixin formSelect()
+//- mixin formTextarea()
+//- mixin formRadio()
+//- mixin formCheckbox()
