Add custom select js. Create custom hamburger.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,11 +1,9 @@
 ---
 title: Home
 
-contentClassName: home
-dataPageName: index
+contentClassName: p-home
 ---
 extends shared/_layout
 
 block content
   div.body(class!= contentClassName)
-
