--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -7,7 +7,7 @@ html(lang="en")
   head
     include _head
 
-  body(data-file!= dataPageName)
+  body
 
     block header
       include ../components/_header
